Provide public static OBJECT_MAPPER field.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/galyleo/trunk@7404 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2021-01-26  Allen D. Ball  <ball@hcf.dev>
 
+	* src/main/java/galyleo/server/Server.java:
+	Provide public static OBJECT_MAPPER field.
+
 	* src/main/java/galyleo/server/Channel.java (Control):
 	Changed action method prototype to
 	"void action(Dispatcher,Message,Message) throws Exception".
