* src/main/java/galyleo/server/Message.java: Added Message creation methods for side-effect messages.
* src/main/java/galyleo/server/Server.java:
Provide stamp(Message) to add protocol verison, session, and date
to outgoing messages.


git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/galyleo/trunk@7406 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2021-01-27  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/galyleo/server/Message.java:
+	Added Message creation methods for side-effect messages.
+
+	* src/main/java/galyleo/server/Server.java:
+	Provide stamp(Message) to add protocol verison, session, and date
+	to outgoing messages.
+
 2021-01-26  Allen D. Ball  <ball@hcf.dev>
 
 	* src/main/java/galyleo/server/Server.java:
