--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2021-01-29  Allen D. Ball  <ball@hcf.dev>
+
+	* pom.xml: Create a shaded JAR.
+
 2021-01-27  Allen D. Ball  <ball@hcf.dev>
 
 	* src/main/java/galyleo/server/Message.java:
