Implemented Java.execute(String). Linked-in galyleo.shell.java.Runtime.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/galyleo/trunk@7410 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2021-01-30  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/galyleo/shell/Java.java:
+	Implemented Java.execute(String).
+	Linked-in galyleo.shell.java.Runtime.
+
 2021-01-29  Allen D. Ball  <ball@hcf.dev>
 
 	* pom.xml: Create a shaded JAR.
