Re-factored all communications code to Server.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/galyleo/trunk@7416 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2021-02-01  Allen D. Ball  <ball@hcf.dev>
 
+	* src/main/java/galyleo/kernel/Kernel.java,
+	src/main/java/galyleo/server/Server.java:
+	Re-factored all communications code to Server.
+
 	* src/main/java/galyleo/shell/magic/:
 	Initial magic implementation.
 
