Added Java Magic and re-factored Shell and Magic accordingly.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/galyleo/trunk@7422 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2021-02-01  Allen D. Ball  <ball@hcf.dev>
 
+	* Added Java Magic and re-factored Shell and Magic accordingly.
+
 	* src/main/java/galyleo/shell/Shell.java:
 	Moved implementation from Java (and removed Java).
 
