* src/main/java/galyleo/shell/Shell.java: Added addJarsToClasspath(String...) and addToClasspath(String...) methods.
* src/main/java/galyleo/kernel/Kernel.java:
Add Spark JARs to classpath if SPARK_HOME is satisfied.


git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/galyleo/trunk@7424 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,10 +4,13 @@
 
 	* src/main/java/galyleo/shell/Shell.java:
 	Moved implementation from Java (and removed Java).
+	Added addJarsToClasspath(String...) and addToClasspath(String...)
+	methods.
 
 	* src/main/java/galyleo/kernel/Kernel.java,
 	src/main/java/galyleo/server/Server.java:
 	Re-factored all communications code to Server.
+	Add Spark JARs to classpath if SPARK_HOME is satisfied.
 
 	* src/main/java/galyleo/shell/magic/:
 	Initial magic implementation.
