Re-factored Shell as a Magic implementation.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/galyleo/trunk@7438 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2021-02-03  Allen D. Ball  <ball@hcf.dev>
 
+	* Re-factored Shell as a Magic implementation.
+
 	* src/main/java/galyleo/shell/magic/Magic.java:
 	Added static getCellMagicCommand(String) method.
 
@@ -16,8 +18,6 @@
 	* Re-factored Magic interfaces to accept Shell instead of JShell.
 
 2021-02-01  Allen D. Ball  <ball@hcf.dev>
-
-	* Added Java Magic and re-factored Shell and Magic accordingly.
 
 	* src/main/java/galyleo/shell/Shell.java:
 	Added addJarsToClasspath(String...) and addToClasspath(String...)
