Added addToClasspath({File,Path}...) and addJarsToClasspath({File,Path}...) method variants.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/galyleo/trunk@7440 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2021-02-03  Allen D. Ball  <ball@hcf.dev>
 
+	* src/main/java/galyleo/shell/Shell.java:
+	Added addToClasspath({File,Path}...) and
+	addJarsToClasspath({File,Path}...) method variants.
+
 	* Re-factored Shell as a Magic implementation.
 
 	* src/main/java/galyleo/shell/magic/Magic.java:
