Analyze JARs added to the Shell's classpath to determine the Maven artifact(s) implemented.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/galyleo-kernel/trunk@7451 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2021-02-05  Allen D. Ball  <ball@hcf.dev>
+
+	* Analyze JARs added to the Shell's classpath to determine the
+	Maven artifact(s) implemented.
+
 2021-02-03  Allen D. Ball  <ball@hcf.dev>
 
 	* src/main/java/galyleo/shell/Shell.java:
