Changed Launcher, Install, Connect, and Kernel to implement ApplicationRunner for command line argument processing.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/galyleo-kernel/trunk@7463 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2021-02-08  Allen D. Ball  <ball@hcf.dev>
 
+	* Changed Launcher, Install, Connect, and Kernel to implement
+	ApplicationRunner for command line argument processing.
+
 	* src/main/java/galyleo/kernel/Kernel.java:
 	Implement @RestController, ApplicationContextAware, and
 	ApplicationRunner (the last to parse command line arguments).
