KernelRestController: Initial writing (removed from Kernel).
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/galyleo-kernel/trunk@7464 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2021-02-08  Allen D. Ball  <ball@hcf.dev>
 
+	* src/main/java/galyleo/kernel/KernelRestController.java:
+	Initial writing (removed from Kernel).
+
 	* Changed Launcher, Install, Connect, and Kernel to implement
 	ApplicationRunner for command line argument processing.
 
