Reload Magic service providers on Shell (re)start.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/galyleo-kernel/trunk@7485 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2021-02-14  Allen D. Ball  <ball@hcf.dev>
+
+	* Reload Magic service providers on Shell (re)start.
+
 2021-02-13  Allen D. Ball  <ball@hcf.dev>
 
 	* Create an isolated ClassLoader in the JShell instance to load
