In bootstrap.jsh, create __ class with invokeStaticMethod() to simplify calls from the JShell client.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/galyleo-kernel/trunk@7491 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2021-02-17  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/resources/bootstrap.jsh:
+	Create __ class with invokeStaticMethod() to simplify calls from
+	the JShell client.
+
 2021-02-14  Allen D. Ball  <ball@hcf.dev>
 
 	* Added (trivial) Magic implementations for JShell methods.
