--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2021-02-19  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/galyleo/server/Server.java:
+	Shutdown immediately without waiting to send shutdown_reply.
+
 2021-02-17  Allen D. Ball  <ball@hcf.dev>
 
 	* src/main/java/galyleo/server/Renderer.java:
