Added "magics" Magic.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/galyleo-kernel/trunk@7604 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2021-02-19  Allen D. Ball  <ball@hcf.dev>
 
+	* Added "magics" Magic.
+
 	* src/main/java/galyleo/install/Install.java:
 	Define ${maven.repo.local} if installing into sysPrefix.
 
