Added AbstractMagic to provide common PropertyPlaceholderHelper. Refactored Magic class hierarchy.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/galyleo-kernel/trunk@7619 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2021-02-21  Allen D. Ball  <ball@hcf.dev>
 
+	* src/main/java/galyleo/shell/magic/AbstractMagic.java:
+	Initial writing: Provides common PropertyPlaceholderHelper.
+
 	* src/main/java/galyleo/shell/Shell.java:
 	Propagate kernel VM "-D" arguments to the JShell VM options.
 
