Interim check-in: Merge POM values and display current POM if no POM is supplied.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/galyleo-kernel/trunk@7623 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,10 @@
 2021-02-21  Allen D. Ball  <ball@hcf.dev>
 
-	* src/main/java/galyleo/dependency/Resolver.java:
-	Interim check-in.
+	* src/main/java/galyleo/dependency/POM.java,
+	src/main/java/galyleo/dependency/Resolver.java,
+	src/main/java/galyleo/shell/magic/POM.java:
+	Interim check-in: Merge POM values and display current POM if no
+	POM is supplied.
 
 	* src/main/java/galyleo/shell/magic/AbstractMagic.java:
 	Initial writing: Provides common PropertyPlaceholderHelper.
