In Analyzer, refactored to use POM.Dependency for Artifact implementation.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/galyleo-kernel/trunk@7624 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2021-02-21  Allen D. Ball  <ball@hcf.dev>
 
+	* src/main/java/galyleo/dependency/Analyzer.java:
+	Refactored to use POM.Dependency for Artifact implementation.
+
 	* src/main/java/galyleo/dependency/POM.java,
 	src/main/java/galyleo/dependency/Resolver.java,
 	src/main/java/galyleo/shell/magic/POM.java:
