Use org.eclipse.aether.artifact.Artifact.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/galyleo-kernel/trunk@7628 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2021-02-23  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/galyleo/dependency/Analyzer.java:
+	Use org.eclipse.aether.artifact.Artifact.
+
 2021-02-22  Allen D. Ball  <ball@hcf.dev>
 
 	* Interim check-in: Integrated Apache Maven Artifact Resolver.
