In resolve(POM), update the JShell classpath with newly resolved files.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/galyleo-kernel/trunk@7630 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2021-02-23  Allen D. Ball  <ball@hcf.dev>
 
+	* src/main/java/galyleo/shell/Shell.java:
+	In resolve(POM), update the JShell classpath with newly resolved
+	files.
+
 	* src/main/java/galyleo/dependency/Resolver.java:
 	Provide classpath management.
 
