Added working dependency resolution.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/galyleo-kernel/trunk@7634 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2021-02-24  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/galyleo/dependency/Resolver.java:
+	Added working dependency resolution.
+
 2021-02-23  Allen D. Ball  <ball@hcf.dev>
 
 	* src/main/java/galyleo/dependency/POM.java:
