Always start the Kernel @RestController.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/ganymede-kernel/trunk@7644 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2021-02-25  Allen D. Ball  <ball@hcf.dev>
 
+	* src/main/java/ganymede/connect/Connect.java:
+	Always start the Kernel @RestController.
+
 	* Re-branded as Ganymede.
 
 2021-02-24  Allen D. Ball  <ball@hcf.dev>
