Added Bindings parameter to Magic.execute(Bindings,String,String) interface. In Shell.execute(String) method, synchronize __.bindings (defined in the JShell instance) with JShell.variables().
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/ganymede-kernel/trunk@7654 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2021-02-28  Allen D. Ball  <ball@hcf.dev>
+
+	* Added Bindings parameter to
+	Magic.execute(Bindings,String,String) interface.  In
+	Shell.execute(String) method, synchronize __.bindings (defined in
+	the JShell instance) with JShell.variables().
+
 2021-02-26  Allen D. Ball  <ball@hcf.dev>
 
 	* Added Magic.isComplete(String,String) interface method and
