Added execute_result(execution_count,String) method.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/ganymede-kernel/trunk@7663 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2021-03-01  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/ganymede/server/Message.java:
+	Added execute_result(execution_count,String) method.
+
 2021-02-28  Allen D. Ball  <ball@hcf.dev>
 
 	* Added %%thymeleaf Magic.
