Fixed bug in getArtifactFrom(Attributes,File).
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/ganymede-kernel/trunk@7677 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2021-03-04  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/ganymede/dependency/Analyzer.java:
+	Fixed bug in getArtifactFrom(Attributes,File).
+
 2021-03-01  Allen D. Ball  <ball@hcf.dev>
 
 	* src/main/java/ganymede/server/Message.java:
