HTML Magic: Initial writing.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/ganymede-kernel/trunk@7689 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2021-03-07  Allen D. Ball  <ball@hcf.dev>
 
+	* src/main/java/ganymede/shell/magic/HTML.java: Initial writing.
+
 	* src/main/java/ganymede/dependency/Resolver.java:
 	Quietly enforce only one SLF4J binding is added to the classpath.
 
