Add topic to Pub message envelopes (trivially msg_type).
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/ganymede-kernel/trunk@7706 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2021-03-12  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/ganymede/server/Message.java:
+	Add topic to Pub message envelopes (trivially msg_type).
+
 2021-03-10  Allen D. Ball  <ball@hcf.dev>
 
 	* src/main/java/ganymede/server/renderer/AbstractThymeleafHTMLRenderer.java:
