Define and implement getKernelInfo() method.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/ganymede-kernel/trunk@7707 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2021-03-14  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/ganymede/kernel/Kernel.java,
+	src/main/java/ganymede/server/Server.java:
+	Define and implement getKernelInfo() method.
+
 2021-03-12  Allen D. Ball  <ball@hcf.dev>
 
 	* src/main/java/ganymede/server/Message.java:
