Added parse(InputStream) method.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/ganymede-kernel/trunk@7738 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2021-03-24  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/ganymede/dependency/Analyzer.java:
+	Added parse(InputStream) method.
+
 2021-03-21  Allen D. Ball  <ball@hcf.dev>
 
 	* src/generate-dependencies-resources.bash: Initial writing.
