Maintain shared ScriptContext in NotebookContext (__) and refactor Magic accordingly.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/ganymede-kernel/trunk@7746 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2021-03-26  Allen D. Ball  <ball@hcf.dev>
+
+	* Maintain shared ScriptContext in NotebookContext (__) and
+	refactor Magic accordingly.
+
 2021-03-25  Allen D. Ball  <ball@hcf.dev>
 
 	* Added GET /kernel/classpath REST method.
