Added LICENSE and copyright protection notices.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/ganymede-kernel/trunk@7753 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2021-03-26  Allen D. Ball  <ball@hcf.dev>
 
+	* Added LICENSE and copyright protection notices.
+
 	* Translate POST /kernel/print to IOPub.pub(Message)
 	synchronously.
 
