Added static NotebookContext.update(JShell) method to update NotebookContext in the JShell instance.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/ganymede-kernel/trunk@7758 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2021-03-28  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/ganymede/notebook/NotebookContext.java:
+	Added static update(JShell) method to update NotebookContext in
+	the JShell instance.
+
 2021-03-26  Allen D. Ball  <ball@hcf.dev>
 
 	* Added LICENSE and copyright protection notices.
