Refactor Magic methods to accept NotebookContext parameter instead of ScriptContext.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/ganymede-kernel/trunk@7759 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2021-03-28  Allen D. Ball  <ball@hcf.dev>
 
+	* Refactor Magic methods to accept NotebookContext parameter
+	instead of ScriptContext.
+
 	* src/main/java/ganymede/notebook/NotebookContext.java:
 	Added static update(JShell) method to update NotebookContext in
 	the JShell instance.
