Added ganymede.jsr223 package with Thymeleaf ScriptEngineFactory implementation.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/ganymede-kernel/trunk@7768 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2021-03-29  Allen D. Ball  <ball@hcf.dev>
+
+	* Added ganymede.jsr223 package with Thymeleaf ScriptEngineFactory
+	implementation.
+
 2021-03-28  Allen D. Ball  <ball@hcf.dev>
 
 	* Refactor Magic methods to accept NotebookContext parameter
