Use addToClasspath(Artifact...) in resolve(Shell,PrintStream,PrintStream,POM).
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/ganymede-kernel/trunk@7776 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2021-04-01  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/ganymede/dependency/Resolver.java;
+	Use addToClasspath(Artifact...) in
+	resolve(Shell,PrintStream,PrintStream,POM).
+
 2021-03-31  Allen D. Ball  <ball@hcf.dev>
 
 	* Refactored Thymeleaf Magic as subclass of
