Added getClassLoader() and reload(Predicate<Class<?>>) methods.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/ganymede-kernel/trunk@7791 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2021-04-05  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/ganymede/util/ServiceProviderMap.java:
+	Added getClassLoader() and reload(Predicate<Class<?>>) methods.
+
 2021-04-01  Allen D. Ball  <ball@hcf.dev>
 
 	* src/main/java/ganymede/dependency/Resolver.java;
