Change Renderer.render(Object) interface to render(Object,Object...) to accept alternate representations.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/ganymede-kernel/trunk@7800 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2021-04-06  Allen D. Ball  <ball@hcf.dev>
 
+	* Change Renderer.render(Object) interface to
+	render(Object,Object...) to accept alternate representations.
+
 	* src/main/java/ganymede/server/renderer/ThymeleafRenderer.java,
 	src/main/java/ganymede/shell/magic/Thymeleaf.java:
 	Combined Renederer implementations into single ThymeleafRenderer.
