Do not install SysProperties service.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/ganymede-kernel/trunk@7806 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -227,8 +227,7 @@
 	* src/main/java/galyleo/shell/Shell.java:
 	Added classpath() method.
 
-	* src/main/java/galyleo/shell/magic/Classpath.java,
-	src/main/java/galyleo/shell/magic/SysProperties.java:
+	* src/main/java/galyleo/shell/magic/Classpath.java:
 	Initial writing.
 
 	* src/main/java/galyleo/shell/Magic.java:
