First draft of README.md.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/ganymede-kernel/trunk@7807 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2021-04-07  Allen D. Ball  <ball@hcf.dev>
+
+	* README.md: First draft.
+
 2021-04-06  Allen D. Ball  <ball@hcf.dev>
 
 	* Changed Java Magic to display bindings if no code is specified.
