Added Scala dependencies.

--- a/notebooks/hello.ipynb
+++ b/notebooks/hello.ipynb
@@ -10,14 +10,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello, World"
+      "Hello, World\n"
      ]
     }
    ],
    "source": [
     "var greeting = \"Hello, World\";\n",
     "\n",
-    "System.out.print(greeting);"
+    "System.out.println(greeting);"
    ]
   },
   {
@@ -102,33 +102,39 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "suspended-biology",
+   "id": "64e33c0c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "No scala REPL available\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%scala\n",
-    "println(greeting)"
+    "%%pom\n",
+    "dependencies:\n",
+    "- org.scala-lang:scala-compiler:2.12.10\n",
+    "- org.scala-lang:scala-library:2.12.10"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "suspended-biology",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%scala\n",
+    "// Note: Fails to print\n",
+    "println(greeting)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "passing-alaska",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No scala REPL available\n"
+      "Hello, World\n"
      ]
     }
    ],
@@ -139,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "b6869101",
    "metadata": {},
    "outputs": [
@@ -170,20 +176,20 @@
        "        <td>greeting</td><td>String</td><td>Hello, World</td>\n",
        "      </tr>\n",
        "      <tr>\n",
-       "        <td>kotlin.script.engine</td><td></td><td>kotlin.script.experimental.jvmhost.jsr223.KotlinJsr223ScriptEngineImpl@4b127e1b</td>\n",
+       "        <td>kotlin.script.engine</td><td></td><td>kotlin.script.experimental.jvmhost.jsr223.KotlinJsr223ScriptEngineImpl@2eed791f</td>\n",
        "      </tr>\n",
        "      <tr>\n",
-       "        <td>kotlin.script.state</td><td></td><td>org.jetbrains.kotlin.cli.common.repl.AggregatedReplStageState@1537c744</td>\n",
+       "        <td>kotlin.script.state</td><td></td><td>org.jetbrains.kotlin.cli.common.repl.AggregatedReplStageState@45d4421d</td>\n",
        "      </tr>\n",
        "      <tr>\n",
-       "        <td>polyglot.context</td><td></td><td>org.graalvm.polyglot.Context@5bf22fd3</td>\n",
+       "        <td>polyglot.context</td><td></td><td>org.graalvm.polyglot.Context@64de3db3</td>\n",
        "      </tr>\n",
        "    </tbody>\n",
        "  </table>\n",
        "</div>\n"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
