Use Scripted.apply() static method to create ScriptEngine instance.

--- a/notebooks/hello.ipynb
+++ b/notebooks/hello.ipynb
@@ -117,18 +117,6 @@
    "execution_count": 7,
    "id": "suspended-biology",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%scala\n",
-    "// Note: Fails to print\n",
-    "println(greeting)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "passing-alaska",
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -140,12 +128,12 @@
    ],
    "source": [
     "%%scala\n",
-    "System.out.println(greeting)"
+    "Console.withOut(System.out) { println($ctx.greeting) }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "b6869101",
    "metadata": {},
    "outputs": [
@@ -176,22 +164,28 @@
        "        <td>greeting</td><td>String</td><td>Hello, World</td>\n",
        "      </tr>\n",
        "      <tr>\n",
-       "        <td>kotlin.script.engine</td><td></td><td>kotlin.script.experimental.jvmhost.jsr223.KotlinJsr223ScriptEngineImpl@2bb9af36</td>\n",
+       "        <td>kotlin.script.engine</td><td></td><td>kotlin.script.experimental.jvmhost.jsr223.KotlinJsr223ScriptEngineImpl@5baa7935</td>\n",
        "      </tr>\n",
        "      <tr>\n",
-       "        <td>kotlin.script.state</td><td></td><td>org.jetbrains.kotlin.cli.common.repl.AggregatedReplStageState@4ea1aa52</td>\n",
+       "        <td>kotlin.script.state</td><td></td><td>org.jetbrains.kotlin.cli.common.repl.AggregatedReplStageState@78065fcd</td>\n",
        "      </tr>\n",
        "      <tr>\n",
-       "        <td>polyglot.context</td><td></td><td>org.graalvm.polyglot.Context@6a5b7fbc</td>\n",
+       "        <td>polyglot.context</td><td></td><td>org.graalvm.polyglot.Context@6212a4a8</td>\n",
        "      </tr>\n",
        "    </tbody>\n",
        "  </table>\n",
        "</div>\n"
+      ],
+      "text/plain": [
+       "greeting\tString\tHello, World\n",
+       "kotlin.script.engine\t\tkotlin.script.experimental.jvmhost.jsr223.KotlinJsr223ScriptEngineImpl@5baa7935\n",
+       "kotlin.script.state\t\torg.jetbrains.kotlin.cli.common.repl.AggregatedReplStageState@78065fcd\n",
+       "polyglot.context\t\torg.graalvm.polyglot.Context@6212a4a8\n",
+       "\n"
       ]
      },
-     "execution_count": 9,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
